# throw-detection-service

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
maps/: angle_map.json  label_map.json
models/: throw_detection_v0-1.keras
test_data/: test-clip-003(4).json
tools/: throw_prediction.py
