[tool.poetry]
name = "throw-detection-service"
version = "0.1.0"
description = ""
authors = ["will-s-stone <will@williamstone.me>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
flask = "^3.1.0"
numpy = ">=1.26.0,<2.2.0"
tensorflow = "^2.19.0"
flask-cors = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
